Closed Bug 329595 Opened 20 years ago Closed 20 years ago

Crash on marking mail as Junk (Local Folders) [@ nsMsgDBView::PerformActionsOnJunkMsgs]

Categories

(Thunderbird :: General, defect)

x86
Windows XP
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird2.0

People

(Reporter: u63580, Assigned: mscott)

Details

(4 keywords)

Crash Data

Attachments

(1 file, 1 obsolete file)

TB version 2 alpha 1 (20060306) Current nightly of TB 2 crashes whenever I mark a message in "Local Folders" as Junk. After crash, message is marked as Junk, but not deleted. I have TB set to move manually-marked Junk to the Junk folder. Talkback ID: TB16036150X
Summary: Crash on marking mail as Junk (Local Folders) → Crash on marking mail as Junk (Local Folders) [crash@nsMsgDBView::PerformActionsOnJunkMsgs]
Also: TB16049824H
this is odd - I do this all the time. Have you tried a trunk build? You have a junk folder, correct?
(In reply to comment #2) > this is odd - I do this all the time. Have you tried a trunk build? You have a > junk folder, correct? > Redownloading and installing seems to have solved the problem. Sorry to disturb you!
Status: UNCONFIRMED → RESOLVED
Closed: 20 years ago
Resolution: --- → WORKSFORME
Damn, having said that, the problem has reappeared on some new junk. New talkback: TB16054529Z
Status: RESOLVED → UNCONFIRMED
Resolution: WORKSFORME → ---
Incident ID: 16054529 Stack Signature nsMsgDBView::PerformActionsOnJunkMsgs 7b9c55e9 Product ID Thunderbird2 Build ID 2006030706 Trigger Time 2006-03-07 10:37:10.0 Platform Win32 Operating System Windows NT 5.1 build 2600 Module thunderbird.exe + (00424d38) URL visited User Comments Since Last Crash 5573 sec Total Uptime 5573 sec Trigger Reason Access violation Source File, Line No. e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgDBView.cpp, line 2910 Stack Trace nsMsgDBView::PerformActionsOnJunkMsgs [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgDBView.cpp, line 2910] nsMsgDBView::OnMessageClassified [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgDBView.cpp, line 2849] MessageObserver::analyzeTokens [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp, line 1259] nsMsgProtocol::OnStopRequest [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/util/nsMsgProtocol.cpp, line 392] nsMailboxProtocol::OnStopRequest [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/local/src/nsMailboxProtocol.cpp, line 395] nsInputStreamPump::OnStateStop [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsInputStreamPump.cpp, line 564] 0x0259cf30 nsMailboxProtocol::`vftable' nsCMSEncoder::AddRef [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/security/manager/ssl/src/nsCMS.cpp, line 55] 0x8b560c45 mCommandUpdater is null checked everywhere else, but not in this code...
Severity: normal → critical
Keywords: crash
Attached patch possibility (obsolete) — Splinter Review
Attachment #214395 - Flags: superreview?
Attachment #214395 - Flags: review?
Attachment #214395 - Flags: superreview?(bienvenu)
Attachment #214395 - Flags: superreview?
Attachment #214395 - Flags: review?(bienvenu)
Attachment #214395 - Flags: review?
Attached patch possibilitySplinter Review
*sigh*. my tools are fighting me
Attachment #214395 - Attachment is obsolete: true
Attachment #214396 - Flags: superreview?(bienvenu)
Attachment #214396 - Flags: review?(bienvenu)
Attachment #214395 - Flags: superreview?(bienvenu)
Attachment #214395 - Flags: review?(bienvenu)
Comment on attachment 214396 [details] [diff] [review] possibility yes, that's a possibility - though it doesn't explain why it just started crashing...
Attachment #214396 - Flags: superreview?(bienvenu)
Attachment #214396 - Flags: superreview+
Attachment #214396 - Flags: review?(bienvenu)
Attachment #214396 - Flags: review+
Comment on attachment 214396 [details] [diff] [review] possibility mozilla/mailnews/base/src/nsMsgDBView.cpp 1.232 Should we commit this to branches? it's a simple null check which hopefully will resolve an annoying crash
Attachment #214396 - Flags: approval1.8.0.3?
Attachment #214396 - Flags: approval-branch-1.8.1?(bienvenu)
Attachment #214396 - Flags: approval-branch-1.8.1?(bienvenu) → approval-branch-1.8.1+
looks like this was checked into the 1.8.1 branch and the trunk on 03/07.
Status: UNCONFIRMED → RESOLVED
Closed: 20 years ago20 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird2.0
Comment on attachment 214396 [details] [diff] [review] possibility Please check in promptly on the 1.8.0 branch. Thanks!
Attachment #214396 - Flags: approval1.8.0.3? → approval1.8.0.3+
I got this with today's thunderbird2/winxp: tb17745016 nsMsgDBView::PerformActionsOnJunkMsgs [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgDBView.cpp, line 2910] nsMsgDBView::OnMessageClassified [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/base/src/nsMsgDBView.cpp, line 2849] MessageObserver::analyzeTokens [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/extensions/bayesian-spam-filter/src/nsBayesianFilter.cpp, line 1259] nsImapCacheStreamListener::OnStopRequest [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/mailnews/imap/src/nsImapProtocol.cpp, line 7830] nsInputStreamPump::OnStateStop [e:/builds/tinderbox/Tb-Mozilla1.8/WINNT_5.0_Depend/mozilla/netwerk/base/src/nsInputStreamPump.cpp, line 564] 0x07f4c78c
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Note that this was when viewing mail in window (not the preview pane) from an imap server, so it is a little different from the original case of local folders, but the stack is the same.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Crash on marking mail as Junk (Local Folders) [crash@nsMsgDBView::PerformActionsOnJunkMsgs] → Crash on marking mail as Junk (Local Folders) [@ nsMsgDBView::PerformActionsOnJunkMsgs]
Cross-ref: Bug 315922 and Bug 313103 (both reported against the Core). These bugs also report crashes while setting/unsetting the junk flag and have (perhaps unsurprisingly) nsMsgDBView::PerformActionsOnJunkMsgs in the stack trace.
Keywords: fixed1.8.0.3
Comment on attachment 214396 [details] [diff] [review] possibility MOZILLA_1_8_BRANCH: mozilla/mailnews/base/src/nsMsgDBView.cpp 1.222.4.8 MOZILLA_1_8_0_BRANCH (mscott): mozilla/mailnews/base/src/nsMsgDBView.cpp 1.222.4.2.2.3
verified on the 1.8.0 branch using version 1.5.0.4 (20060508). Following the reporter's steps I don't see a crash marking messages as junk. Adding keyword.
->FIXED
Status: NEW → RESOLVED
Closed: 20 years ago20 years ago
Resolution: --- → FIXED
Verified on Thunderbird 2 release candidate; version 2.0pre (20070307); Marking messages as junk does not crash the application. Adding verified1.8.1.3
Keywords: verified1.8.1.3
Crash Signature: [@ nsMsgDBView::PerformActionsOnJunkMsgs]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: