Bug 329595 Crash on marking mail as Junk (Local Folders) [crash@nsMsgDBView::PerformActionsOnJunkMsgs] r=bienvenu sr=bienvenu